changes in Product CRUD

--- a/NetSixTestFront/src/app/table/table.component.html
+++ b/NetSixTestFront/src/app/table/table.component.html
@@ -1,1 +1,46 @@
-<p>table works!</p>
+
+
+<div class="container">
+    <a id='btnCreate' class="btn btn-primary" routerLink="/Product/Create">Create</a>
+
+    
+<table mat-table #table [dataSource]="dataSource">
+    <ng-container matColumnDef="categoryName">
+        <th mat-header-cell *matHeaderCellDef> categoryName </th>
+        <td mat-cell *matCellDef="let element"> {{element.categoryName}} </td>
+    </ng-container>
+    <ng-container matColumnDef="enabled">
+        <th mat-header-cell *matHeaderCellDef> enabled </th>
+        <td mat-cell *matCellDef="let element"> {{element.enabled}} </td>
+    </ng-container>
+    <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef> id </th>
+        <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+    </ng-container>
+    <ng-container matColumnDef="price">
+        <th mat-header-cell *matHeaderCellDef> price </th>
+        <td mat-cell *matCellDef="let element"> {{element.price}} </td>
+    </ng-container>
+    <ng-container matColumnDef="name">
+        <th mat-header-cell id="productNameHeader" *matHeaderCellDef> name </th>
+        <td mat-cell id="productName" *matCellDef="let element"> {{element.name}} </td>
+    </ng-container>
+    <ng-container matColumnDef="quantity">
+        <th mat-header-cell mat-sort-header *matHeaderCellDef> quantity </th>
+        <td mat-cell *matCellDef="let element">   {{element.quantity}} </td>
+    </ng-container>
+    <ng-container matColumnDef="productIdUrl">
+        <th mat-header-cell *matHeaderCellDef> Actions </th>
+        <td mat-cell *matCellDef="let element"> <a class="btn btn-primary btn-act" routerLink='/Product/{{element.productIdUrl}}'>View </a>
+            <a class="btn btn-success btn-act" href='/Product/Edit/{{element.productIdUrl}}'>Edit </a>
+            <a class="btn btn-danger btn-act" (click)="onDeleteProduct(element.id)"
+            >Delete </a>
+            <!-- href='/Product/Delete/{{element.productIdUrl}}' -->
+        </td>
+    </ng-container>
+    <mat-header-row *matHeaderRowDef="displayColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: displayColumns"></mat-row>
+
+</table> 
+
+</div>
