--- a/NetSixTestFront/src/app/app.component.html
+++ b/NetSixTestFront/src/app/app.component.html
@@ -308,24 +308,15 @@
 <div class="content" role="main">
 
   <!-- Highlight Card -->
-  <div class="card highlight-card card-small">
-
-    <span style="margin-left:-10px;" >{{ title }} </span>
-
-  </div>
+  
 
   <!-- Resources -->
-  <app-table></app-table>
-  <div class="card-container">
-    <button class="card card-small" >
-      <!-- (click)="selection.value = 'component'" tabindex="0" -->
-      <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/></svg>
-      <span>New Component</span>
-    </button>
-  </div>
+
+
+  <app-index></app-index>
 
   <!-- Footer -->
-  <footer>
+  <!-- <footer>
       Love Angular?&nbsp;
       <a href="https://github.com/angular/angular" target="_blank" rel="noopener"> Give our repo a star.
         <div class="github-star-badge">
@@ -336,7 +327,7 @@
       <a href="https://github.com/angular/angular" target="_blank" rel="noopener">
         <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z" fill="#1976d2"/><path d="M0 0h24v24H0z" fill="none"/></svg>
       </a>
-  </footer>
+  </footer> -->
 
   <svg id="clouds" xmlns="http://www.w3.org/2000/svg" width="2611.084" height="485.677" viewBox="0 0 2611.084 485.677">
     <title>Gray Clouds Background</title>
