changes to styling

--- a/NetSixTestFront/src/app/app.component.html
+++ b/NetSixTestFront/src/app/app.component.html
@@ -313,7 +313,7 @@
   <!-- Resources -->
 
 
-  <app-index></app-index>
+  <app-index style="{{isMainComponent() ? 'visiblity:display-block;':'display:none;'}}"></app-index>
 
   <!-- Footer -->
   <!-- <footer>
