--- a/NetSixTestFront/src/app/header/header.component.html
+++ b/NetSixTestFront/src/app/header/header.component.html
@@ -2,7 +2,7 @@
     <img style="left:0% " width="80" height="70" src="https://e7.pngegg.com/pngimages/531/180/png-clipart-red-and-white-letter-a-logo-angular-logo-icons-logos-emojis-tech-companies-thumbnail.png"/>
 <ul>    
     <li><a href="#">Home</a> </li>
-    <li><a href="#">Products</a> </li>
-    <li><a href="#">Categories</a> </li>
+    <li><a routerLink="/Product">Products</a> </li>
+    <li><a routerLink="/Category">Categories</a> </li>
 </ul>
 </nav>
