--- a/NetSixTestFront/src/app/category/category-table/category-table.component.css
+++ b/NetSixTestFront/src/app/category/category-table/category-table.component.css
@@ -7,10 +7,11 @@ table {
   th.mat-header-cell {
     text-align: center !important;
     padding: 16.5px;
-    max-width: 300px;
+ 
   }
   .containerButtons{
   display: flex;
+  flex-direction: column;
   }
   td.mat-column-categoryUrl{
     text-align: center !important;
@@ -27,8 +28,8 @@ table {
   td.mat-cell {
     text-align: center !important;
     white-space: break-spaces;
-    padding: 15px;
-    max-width: 300px;
+    padding: 15px; 
+    max-width: none !important;
   }
 
   .mat-column-name{
@@ -36,21 +37,12 @@ table {
     text-align: center !important;
     white-space: break-spaces;
     padding: 15px;
-    max-width: 300px;
   }
   .mat-column-id{
 
     text-align: center !important;
     white-space: break-spaces;
     padding: 15px;
-    max-width: 300px;
-  }
-  .mat-column-id{
-
-    text-align: center !important;
-    white-space: break-spaces;
-    padding: 15px;
-    max-width: 300px;
   }
   #actionNameHeader{
     margin-right:4%;
@@ -72,5 +64,5 @@ table {
   .btn-act{
     width:min-content;
     height:29px;
-    padding-top:-10px;
+    padding-top: 0;  
   }
