--- a/NetSixTestFront/src/app/category/category-table/category-table.component.html
+++ b/NetSixTestFront/src/app/category/category-table/category-table.component.html
@@ -18,11 +18,10 @@
         <ng-container matColumnDef="categoryUrl">
             <th mat-header-cell id="actionNameHeader" *matHeaderCellDef> Actions </th>
             <div id="containerButtons">
-
-                <td mat-cell *matCellDef="let element"> <a class="btn btn-primary btn-act" routerLink='/Category/{{element.categoryUrl}}'>View </a>
+                <td mat-cell *matCellDef="let element" > 
+                    <a class="btn btn-primary btn-act" routerLink='/Category/{{element.categoryUrl}}'>View </a>
                     <a class="btn btn-success btn-act" href='/Category/Edit/{{element.categoryUrl}}'>Edit </a>
-                    <a class="btn btn-danger btn-act" (click)="onDeleteCategory(element.id)"
-                    >Delete </a>
+                    <a class="btn btn-danger btn-act" (click)="onDeleteCategory(element.id)"  >Delete </a>
                     <!-- href='/Product/Delete/{{element.productIdUrl}}' -->
                 </td>
             </div>
