--- a/NetSixTestFront/src/app/category/category-item/category-item.component.html
+++ b/NetSixTestFront/src/app/category/category-item/category-item.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h3>Product Details:</h3>
+    <h3> Details:</h3>
     <br>
     <div class="row">
         <div class="col col-2" style="margin-right:3.5%;">
