--- a/NetSixTestFront/src/app/category/category-table/category-table.component.html
+++ b/NetSixTestFront/src/app/category/category-table/category-table.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <a id='btnCreate' class="btn btn-primary" routerLink="/Category/Create">Create</a>
-    <h3>Category Table</h3>
+    <h3 style="font-weight: 900;">Category Table</h3>
     <table class="table table-striped table-bordered table-responsive">
         <thead>
             <tr>
