--- a/NetSixTestFront/src/app/product/item/item.component.html
+++ b/NetSixTestFront/src/app/product/item/item.component.html
@@ -2,16 +2,16 @@
     <h3>Product Details:</h3>
     <br>
     <div class="row">
-        <div class="col col-2" style="margin-right:3.5%;">
+        <div class="col col-2"  >
             <div class="form-group">
                 <label class="form-label">Id</label>
                 <input class="form-control" type="text" [(ngModel)]="this.product.id" disabled="disabled">
             </div>
         </div>
-        <div class="col col-md-auto">
+      <div class="col col-2" style="margin-left: 0.5%;" >
             <div class="form-group">
-                <label class="form-label">Category</label>
-                <input class="form-control" type="text" [(ngModel)]="this.product.category.name" disabled="disabled">
+                <label class="form-label">Enabled</label>
+                <input class="form-control" type="text" [(ngModel)]="this.product.enabled" disabled="disabled">
             </div>
         </div>
     </div>
@@ -36,15 +36,24 @@
                 <input class="form-control" type="text" [(ngModel)]="this.product.quantity" disabled="disabled">
             </div>
         </div>
-        <div class="col col-md-auto">
+          <div class="col col-2" style="margin-top: 1%;">
             <div class="form-group">
-                <label class="form-label">Enabled</label>
-                <input class="form-control" type="text" [(ngModel)]="this.product.enabled" disabled="disabled">
+                <a class="btn btn-success btn-act" href='/Product/Edit/{{product.id}}'>Edit </a>
             </div>
         </div>
         
+        
     </div>
-    <div class="row">
+    <div  class="row">
+         <div class="col col-md-auto"  >
+            <div class="form-group">
+                <label class="form-label">Categories</label>
+                <p>{{getCategoryNames()}}</p>
+
+            </div>
+        </div>
+    </div>
+     <div class="row">
     <div class="col-md-4">
           <h5>Images</h5>
             <div *ngIf="product.pictures.length === 0">No images selected.</div>
@@ -54,4 +63,5 @@
         </div>
     </div>
 </div>
+
 
