--- a/NetSixTestFront/src/app/product/item/item.component.html
+++ b/NetSixTestFront/src/app/product/item/item.component.html
@@ -1,51 +1,55 @@
 <div class="container">
-    <h3>Product Details:</h3>
+    <h3 style="font-weight: 900;">Product Details:</h3>
     <br>
-    <div class="row">
-        <div class="col col-2"  >
-            <div class="form-group">
-                <label class="form-label">Id</label>
-                <input class="form-control" type="text" [(ngModel)]="this.product.id" disabled="disabled">
+    <div class="card" style="width: 50em; padding: 40px;">
+
+        <div class="row">
+            <div class="col col-2"  >
+                <div class="form-group">
+                    <label class="form-label">Id</label>
+                    <input class="form-control" type="text" [(ngModel)]="this.product.id" disabled="disabled">
+                </div>
+            </div>
+            <div class="col col-2" style="margin-left: 19.5%;" >
+                <div class="form-group">
+                    <label class="form-label">Enabled</label>
+                    <input class="form-control" type="text" [(ngModel)]="this.product.enabled" disabled="disabled">
+                </div>
             </div>
         </div>
-      <div class="col col-2" style="margin-left: 0.5%;" >
-            <div class="form-group">
-                <label class="form-label">Enabled</label>
-                <input class="form-control" type="text" [(ngModel)]="this.product.enabled" disabled="disabled">
+        <div class="row">
+            <div class="col col-md-auto">
+                <div class="form-group">
+                    <label class="form-label">Name</label>
+                    <input class="form-control" type="text" [(ngModel)]="this.product.name" disabled="disabled">
+                </div>
             </div>
+            <div class="col col-md-auto">
+                <div class="form-group">
+                    <label class="form-label">Price</label>
+                    <input class="form-control" type="text" [(ngModel)]="this.product.price" disabled="disabled">
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col col-md-auto">
+                <div class="form-group">
+                    <label class="form-label">Quantity</label>
+                    <input class="form-control" type="text" [(ngModel)]="this.product.quantity" disabled="disabled">
+                </div>
+            </div>
+            <div class="col col-2" style="margin-top: 1%;">
+                <div class="form-group">
+                    <a class="btn btn-success btn-act" href='/Product/Edit/{{product.id}}'>Edit </a>
+                </div>
+            </div>
+            
+            
         </div>
     </div>
-    <div class="row">
-        <div class="col col-md-auto">
-            <div class="form-group">
-                <label class="form-label">Name</label>
-                <input class="form-control" type="text" [(ngModel)]="this.product.name" disabled="disabled">
-            </div>
-        </div>
-        <div class="col col-md-auto">
-            <div class="form-group">
-                <label class="form-label">Price</label>
-                <input class="form-control" type="text" [(ngModel)]="this.product.price" disabled="disabled">
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col col-md-auto">
-            <div class="form-group">
-                <label class="form-label">Quantity</label>
-                <input class="form-control" type="text" [(ngModel)]="this.product.quantity" disabled="disabled">
-            </div>
-        </div>
-          <div class="col col-2" style="margin-top: 1%;">
-            <div class="form-group">
-                <a class="btn btn-success btn-act" href='/Product/Edit/{{product.id}}'>Edit </a>
-            </div>
-        </div>
         
-        
-    </div>
-    <div  class="row">
-         <div class="col col-md-auto"  >
+        <div  class="row">
+            <div class="col col-md-auto"  >
             <div class="form-group">
                 <label class="form-label">Categories</label>
                 <p>{{getCategoryNames()}}</p>
