--- a/NetSixTestFront/src/app/table/table.component.html
+++ b/NetSixTestFront/src/app/table/table.component.html
@@ -2,7 +2,11 @@
 
 <div class="container">
     <a id='btnCreate' class="btn btn-primary" routerLink="/{{entity}}/Create">Create</a>
-    <h3 style="font-weight: 900;">{{tableTitle}}</h3>
+
+    <div style="position: fixed;left: 45%;">
+        <h1 style="font-weight: 900;">{{tableTitle}}</h1>
+
+    </div>
 
     
 <table class="table table-striped table-bordered table-responsive">
